# deepsvg

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
dataset/: .gitignore  preprocess.py
docker/: Dockerfile  docker-build.sh
notebooks/: animation.ipynb  fonts.ipynb  svglib.ipynb
src/deepsvg/: constants.py  logger.py  svg_dataset.py  svgtensor_dataset.py  train.py  train_click.py
src/deepsvg/configs/: _BaseExperimentConfig.py  default_icons.py  defaults_fonts.py  hierarchical_ordered.py  hierarchical_ordered_fonts.py
src/deepsvg/difflib/: loss.py  tensor.py  utils.py
src/deepsvg/gui/: interpolate.py  main.py  utils.py
src/deepsvg/gui/layout/: aligned_textinput.py
src/deepsvg/gui/state/: project.py  state.py
src/deepsvg/model/: basic_blocks.py  config.py  loss.py  model.py  utils.py
src/deepsvg/model/layers/: attention.py  functional.py  improved_transformer.py  positional_encoding.py  transformer.py  utils.py
src/deepsvg/schedulers/: warmup.py
src/deepsvg/svglib/: geom.py  svg.py  svg_command.py  svg_path.py  svg_primitive.py  utils.py
src/deepsvg/utils/: __init__.py  print_cuda_info.py  stats.py  train_utils.py  utils.py
